fix overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
 
 @layer base {
   .display-size {
-    @apply text-e-12xl leading-[120%] lg:leading-[100%] tracking-tighter lg:text-e-15xl;
+    @apply text-e-12xl leading-[120%] lg:leading-[100%] tracking-[-0.15rem] lg:text-e-15xl;
   }
   h1,
   .heading-1 {
